Translations to and with "Peru"

--- a/brasilien.html
+++ b/brasilien.html
@@ -9,6 +9,8 @@ surface: 8'515'770
 population: 207'652'865
 gdp: 8'650
 altitude: 1172
+lang: de
+ref: brasilien
 ---
 {% assign brasilien = site.brasilien | sort: "order" %}
 {% for ch in brasilien %}
