--- a/forschungstagebuch.html
+++ b/forschungstagebuch.html
@@ -9,6 +9,8 @@ flight: 35'500
 cabrides: 96
 interviews: 5'754
 bodyclass: tagebuch
+lang: de
+ref: tagebuch
 ---
 {% assign forschungstagebuch = site.forschungstagebuch | sort: "order" %}
 {% for ch in forschungstagebuch %}
