--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@ subtitle: Eine Forschungsarbeit von <br> Dr. Christian Hauser
 group: navigation-01
 order: 1
 bodyclass: start
-header-img: Bäckerei_MexikoStadt_1.jpg
+header-img: Baeckerei_MexikoStadt_1.jpg
+lang: de
+ref: index
 ---
 
 <div class="karte">
