--- a/kapitel.html
+++ b/kapitel.html
@@ -4,6 +4,8 @@ title: Kapitel
 group: navigation-10
 displaytitle: false
 order: 10
+lang: de
+ref: kapitel
 ---
 {% assign mexiko = site.mexiko | sort: "order" %}
 {% assign kolumbien = site.kolumbien | sort: "order" %}
