--- a/kolumbien.html
+++ b/kolumbien.html
@@ -9,6 +9,8 @@ surface: 1'138'910
 population: 48'653'419
 gdp: 5'806
 altitude: 2640
+lang: de
+ref: kolumbien
 ---
 {% assign kolumbien = site.kolumbien | sort: "order" %}
 {% for ch in kolumbien %}
