--- a/argentinien.html
+++ b/argentinien.html
@@ -9,6 +9,8 @@ surface: 2'780'400
 population: 43'847'430
 gdp: 12'449
 altitude: 25
+lang: de
+ref: argentinien
 ---
 {% assign argentinien = site.argentinien | sort: "order" %}
 {% for ch in argentinien %}
