--- a/mexiko.html
+++ b/mexiko.html
@@ -9,8 +9,10 @@ surface: 1'964'375
 altitude: 2'250
 gdp: 8'201
 population: 127'540'423
+lang: de
+ref: mexiko
 ---
-{% assign mexiko = site.mexiko | sort: "order" %}
+{% assign mexiko = site.mexiko | where: 'lang', page.lang | sort: "order" %}
 {% for ch in mexiko %}
 <section class="box chapter-{{ ch.subject }}" id="{{ ch.subject }}">
     {% if ch.chapter_image %}
