--- a/peru.html
+++ b/peru.html
@@ -1,6 +1,6 @@
 ---
 layout: country
-title: Peru
+title: Perú
 group: navigation-04
 header-img: BILD_PERU-17.jpg
 bodyclass: peru
@@ -9,8 +9,10 @@ surface: 1'285'216
 population: 31'773'839
 gdp: 6'046
 altitude: 161
+lang: de
+ref: peru
 ---
-{% assign peru = site.peru | sort: "order" %}
+{% assign peru = site.peru | where: 'lang', page.lang | sort: "order" %}
 {% for ch in peru %}
 <section class="box chapter-{{ ch.subject }}" id="{{ ch.subject }}">
     {% if ch.chapter_image %}
