--- a/casa.html
+++ b/casa.html
@@ -19,27 +19,27 @@ ref: index
                     <defs>
                         <pattern id="world" patternUnits="userSpaceOnUse" width="5" height="5">
                             <rect width="5" height="5" x="0" y="0" class="st1" />
-                            <image xlink:href="dots.png" x="0" y="0" width="5" height="5" />
+                            <image xlink:href="{{ site.baseurl }}/dots.png" x="0" y="0" width="5" height="5" />
                         </pattern>
                         <pattern id="brasilien" patternUnits="userSpaceOnUse" width="5" height="5">
                             <rect width="5" height="5" x="0" y="0" class="brasilien" />
-                            <image xlink:href="dots.png" x="0" y="0" width="5" height="5" />
+                            <image xlink:href="{{ site.baseurl }}/dots.png" x="0" y="0" width="5" height="5" />
                         </pattern>
                         <pattern id="kolumbien" patternUnits="userSpaceOnUse" width="5" height="5">
                             <rect width="5" height="5" x="0" y="0" class="kolumbien" />
-                            <image xlink:href="dots.png" x="0" y="0" width="5" height="5" />
+                            <image xlink:href="{{ site.baseurl }}/dots.png" x="0" y="0" width="5" height="5" />
                         </pattern>
                         <pattern id="peru" patternUnits="userSpaceOnUse" width="5" height="5">
                             <rect width="5" height="5" x="0" y="0" class="peru" />
-                            <image xlink:href="dots.png" x="0" y="0" width="5" height="5" />
+                            <image xlink:href="{{ site.baseurl }}/dots.png" x="0" y="0" width="5" height="5" />
                         </pattern>
                         <pattern id="argentinien" patternUnits="userSpaceOnUse" width="5" height="5">
                             <rect width="5" height="5" x="0" y="0" class="argentinien" />
-                            <image xlink:href="dots.png" x="0" y="0" width="5" height="5" />
+                            <image xlink:href="{{ site.baseurl }}/dots.png" x="0" y="0" width="5" height="5" />
                         </pattern>
                         <pattern id="mexiko" patternUnits="userSpaceOnUse" width="5" height="5">
                             <rect width="5" height="5" x="0" y="0" class="mexiko" />
-                            <image xlink:href="dots.png" x="0" y="0" width="5" height="5" />
+                            <image xlink:href="{{ site.baseurl }}/dots.png" x="0" y="0" width="5" height="5" />
                         </pattern>
                     </defs>
                 	<g id="world">
