--- a/brasil.html
+++ b/brasil.html
@@ -16,7 +16,7 @@ ref: brasilien
 {% for ch in brasilien %}
 <section class="box chapter-{{ ch.subject }}" id="{{ ch.subject }}">
     {% if ch.chapter_image %}
-        <div class="image grid" style="background-image: url({{ ch.chapter_image | prepend: 'media/img/chapter/' | prepend: site.baseurl }});">
+        <div class="image grid" style="background-image: url({{ ch.chapter_image | prepend: '/media/img/chapter/' | prepend: site.baseurl }});">
         </div>
     {% endif %}
     <div class="content">
